# EMS_workshop1

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGES DONE WHILE MIGRATING.txt  CLAUDE.md  CONTRIBUTING.md  Dockerfile.ops  Dockerfile.web  README.md  docker-compose.yml  eslint.config.js  index.html  jsconfig.json  ops-server.mjs  ops.html  package-lock.json  package.json  vite.config.js  vite.ops.config.js  vitest.config.js  vitest.setup.js
.claude/: launch.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-web.yml  deploy.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_job_media.py  0002_create_attendance.py  0003_attendance_wifi.py  0004_create_technicians.py  0005_create_jobs.py  0006_create_job_event.py  0007_job_completion_and_bill.py  0008_job_payment.py  0009_media_audio_closing.py  0010_job_location.py  0011_device_token.py  0012_dedicated_manager_account.py  0013_technician_security.py  0014_payroll_export.py  0015_money_guards.py  0016_job_token_sequence.py  0017_attendance_presence.py  0018_ops_viewer_role.py  0018_presence_confirmed_effective_time.py  0019_attendance_ping.py  0020_tenancy_root.py  0021_customer.py  0022_geography.py  0023_catalog.py  0024_appliance_unit.py  0025_taxonomy.py  0026_parts.py  0027_events_outbox.py  0028_outcomes.py  0029_power_warranty_intake.py  0030_fleet.py  0031_telemetry.py  0032_integrity.py  0033_validate_tech_fks.py  0034_customer_message.py  0035_job_travel_sample.py  0036_intake_geo_idempotency.py  0036_password_and_registration.py  0037_job_location_verdict.py
backend/app/: __init__.py  main.py  registry.py
backend/app/core/: __init__.py  backup.py  config.py  db.py  metrics.py  request_id.py  scheduler.py  storage.py
backend/app/features/: __init__.py
backend/app/features/attendance/: __init__.py  derive.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/attendance/tests/: test_derive.py  test_payroll_export.py  test_router.py  test_service.py
backend/app/features/catalog/: __init__.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/catalog/tests/: test_router.py
backend/app/features/customer_messaging/: deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/customer_messaging/tests/: test_service.py
backend/app/features/customers/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/features/customers/tests/: test_service.py
backend/app/features/health/: __init__.py  router.py
backend/app/features/identity/: __init__.py  deps.py  models.py  repository.py  router.py  schemas.py  security.py  service.py  throttle.py
backend/app/features/identity/tests/: test_deps.py  test_role_guards.py  test_router.py  test_security.py  test_service.py  test_throttle.py
backend/app/features/jobs/: __init__.py  catalog_map.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/jobs/tests/: test_catalog_map.py  test_evidence_gaps.py  test_money_guards.py  test_router.py  test_schemas.py  test_service.py
backend/app/features/media/: __init__.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/media/tests/: test_delete_policy.py  test_router.py  test_service.py
backend/app/features/notifications/: deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/notifications/tests/: test_router.py  test_service.py
backend/app/features/ops/: __init__.py  deps.py  health.py  router.py  schemas.py  service.py
backend/app/features/ops/tests/: test_health.py  test_metrics.py  test_router.py
backend/app/features/telemetry/: __init__.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/features/tenancy/: __init__.py  models.py
backend/app/shared/: __init__.py  geo.py  phone.py  tenancy.py
backend/scripts/: __init__.py  audit_tech_orphans.py  backfill_customers.py  backfill_job_type_visits.py  backfill_units.py  create_ops_user.py  mine_brands.py  seed_initial_manager.py
backend/tests/: conftest.py  test_app_bootstrap.py  test_attendance_integration.py  test_backup.py  test_catalog_integration.py  test_config.py  test_customers_integration.py  test_dispatch_integration.py  test_fleet_integration.py  test_health.py  test_identity_integration.py  test_integrity_integration.py  test_jobs_integration.py  test_media_integration.py  test_messaging_integration.py  test_outcomes_integration.py  test_request_id.py  test_telemetry_integration.py  test_tenancy_integration.py
docs/: CODE-MAP.md  FixFlow-Demo-Guide.html  HANDOFF.md  PLAYBOOK.md  PRODUCT-READINESS-REVIEW.md  REMEDIATION-PLAN.md  ROADMAP.md  RUNBOOK-BACKUPS.md  SOLUTION-ARCHITECT-GUIDE.md  client-requirements-gap-analysis.md  fixflow-e2e-gap-map.mermaid  fixflow-erd-specification.md  fixflow-target-erd.mermaid  jobs-vertical-plan.md  mobile-sop-phase2-3-plan.md  phase1-backend-safety-plan.md
docs/archive/: REMEDIATION-PLAN.md  jobs-vertical-plan.md  mobile-sop-phase2-3-plan.md  phase1-backend-safety-plan.md
scripts/: check-claude-md.mjs
src/: App.jsx  index.css
src/app/: App.jsx  main.jsx
src/components/: Avatar.jsx  IntegrationBadge.jsx  JobCard.jsx  MonthDots.jsx  NewJobForm.jsx  Overlay.jsx  RoleSwitcher.jsx  StatCard.jsx  StatusChip.jsx  ToastHost.jsx  TroubleshootGuide.jsx  primitives.jsx
src/context/: AppContext.jsx
src/data/: attendance.js  commonFixes.js  faultCodes.js  jobs.js  schedule.js  technicians.js
src/layouts/: ManagerLayout.jsx  PhoneFrame.jsx  TechLayout.jsx
src/lib/: date.js  job.js  statusConfig.js
src/ops/: OpsApp.jsx  (+1 more)
technician-app/: .env.example  .gitignore  App.tsx  README.md  app.json  eas.json  google-services.json  index.ts  package-lock.json  package.json  tsconfig.json
(+275 files in other folders)
