[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixflow-backend"
version = "0.1.0"
description = "FixFlow backend (FastAPI). The control plane for the modular monolith."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.30,<1.0",
  "alembic>=1.13,<2.0",
  "boto3>=1.35,<2.0",
  # IANA timezone DB — Windows has no system tzdb, so ship it for ZoneInfo
  # (attendance converts the authoritative UTC server_time to shop-local).
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.7,<1.0",
  "mypy>=1.13,<2.0",
]

# We are an application, not a distributable library. `pip install -e .` still
# works (handy for `mypy app` and for the Dockerfile), but we list `app` and
# `tests` explicitly to avoid setuptools auto-discovery picking up Alembic.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests", "app"]
addopts = "-ra --strict-markers"
markers = [
  "integration: exercises real SQL; needs Postgres via FIXFLOW_TEST_DATABASE_URL (skipped otherwise)",
]

# ── Ruff (lint + format) ─────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# Curated rule set: pycodestyle, pyflakes, isort, bugbear, pyupgrade,
# pep8-naming, bandit (security). Keep tight from day one.
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = [
  "E501", # line length is handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
# `assert` is fine in tests; same for test-only string constants like fake "tokens"
"**/tests/**" = ["S101", "S105", "S106"]
"alembic/env.py" = ["E402"] # alembic's env.py legitimately mixes imports + setup

# ── Mypy (static types) ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
# Third-party stubs we don't control yet:
[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "alembic.*"]
ignore_missing_imports = true
