[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixflow-backend"
version = "0.1.0"
description = "FixFlow backend (FastAPI). The control plane for the modular monolith."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.30,<1.0",
  "alembic>=1.13,<2.0",
  "boto3>=1.35,<2.0",
  # JWT issue/verify for Name + PIN → token auth (HS256). PIN hashing uses the
  # stdlib (hashlib.pbkdf2_hmac), so no password-hashing dependency is needed.
  "pyjwt[crypto]>=2.9,<3.0",
  # IANA timezone DB — Windows has no system tzdb, so ship it for ZoneInfo
  # (attendance converts the authoritative UTC server_time to shop-local).
  "tzdata>=2024.1",
  # Async HTTP client — used at runtime to POST to the Expo push service.
  "httpx>=0.27,<1.0",
  # Error tracking (off unless FIXFLOW_SENTRY_DSN is set). PII stays out:
  # send_default_pii=False and request bodies are never attached.
  "sentry-sdk[fastapi]>=2.0,<3.0",
  # In-process scheduler (the time seam: Sunday payroll export). Single-replica
  # assumption documented on settings.enable_scheduler.
  "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.7,<1.0",
  "mypy>=1.13,<2.0",
  # Enforces the slice-dependency contract (ARCHITECTURE.md) in CI — the rules
  # were prose-only before, and review demonstrably missed violations.
  "import-linter>=2.0,<3.0",
]

# We are an application, not a distributable library. `pip install -e .` still
# works (handy for `mypy app` and for the Dockerfile), but we list `app` and
# `tests` explicitly to avoid setuptools auto-discovery picking up Alembic.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests", "app"]
addopts = "-ra --strict-markers"
markers = [
  "integration: exercises real SQL; needs Postgres via FIXFLOW_TEST_DATABASE_URL (skipped otherwise)",
]

# ── Ruff (lint + format) ─────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# Curated rule set: pycodestyle, pyflakes, isort, bugbear, pyupgrade,
# pep8-naming, bandit (security). Keep tight from day one.
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = [
  "E501", # line length is handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
# `assert` is fine in tests; same for test-only string constants like fake "tokens"
"**/tests/**" = ["S101", "S105", "S106"]
"alembic/env.py" = ["E402"] # alembic's env.py legitimately mixes imports + setup

# ── Mypy (static types) ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
# Third-party stubs we don't control yet:
[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "alembic.*", "apscheduler.*"]
ignore_missing_imports = true

# ── Import Linter (slice-dependency contract) ────────────────────────────────
# The prose rules in ARCHITECTURE.md, made mechanical. `lint-imports` runs in
# CI after mypy. Identity is the blessed cross-cutting slice (auth seam) and is
# deliberately outside the independence set; every other cross-slice edge must
# go through the target slice's deps.py/service.py and be listed here.
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Feature slices stay independent (cross-slice only via deps/service)"
type = "independence"
modules = [
  "app.features.attendance",
  "app.features.health",
  "app.features.jobs",
  "app.features.media",
  "app.features.notifications",
]
ignore_imports = [
  # Jobs' close-gate checks closing media through the media surface.
  "app.features.jobs.router -> app.features.media.deps",
  "app.features.jobs.service -> app.features.media.service",
  # Manager-assign pushes through the notifications surface.
  "app.features.jobs.router -> app.features.notifications.deps",
  # Media's delete policy asks jobs for the job's status (evidence freezes at
  # close) — router-level composition through the jobs deps/service surface.
  "app.features.media.router -> app.features.jobs.deps",
  "app.features.media.router -> app.features.jobs.schemas",
  # Router tests boot the whole app (which mounts every slice) and spec their
  # fakes against other slices' public services — test harness, not a
  # production dependency. Only the *.service/*.deps surfaces are excepted, so
  # a test reaching into another slice's repository/models still fails.
  "app.features.*.tests.* -> app.main",
  "app.features.*.tests.* -> app.features.*.service",
  "app.features.*.tests.* -> app.features.*.deps",
]

[[tool.importlinter.contracts]]
name = "Identity (the blessed cross-cutting slice) imports no other feature"
type = "forbidden"
source_modules = ["app.features.identity"]
forbidden_modules = [
  "app.features.attendance",
  "app.features.health",
  "app.features.jobs",
  "app.features.media",
  "app.features.notifications",
]
ignore_imports = [
  "app.features.identity.tests.* -> app.main",
]

[[tool.importlinter.contracts]]
name = "shared/ is a pure kernel (imports nothing internal)"
type = "forbidden"
source_modules = ["app.shared"]
forbidden_modules = ["app.core", "app.features"]

[[tool.importlinter.contracts]]
name = "core/ never reaches into features"
type = "forbidden"
source_modules = ["app.core"]
forbidden_modules = ["app.features"]
